<resources>
    <string name="app_name">BLoC Framework</string>

    <string name="main_menu_title">Take your pick</string>
    <string name="main_menu">Menu\nTraditional</string>
    <string name="main_menu_compose">Menu\nCompose</string>
    <string name="main_menu_counter">Counter</string>
    <string name="main_menu_counter_compose">Counter\nCompose</string>
    <string name="main_menu_counter_redux">Counter\nRedux</string>
    <string name="main_menu_books">Books</string>
    <string name="main_menu_calculator">Calculator</string>
    <string name="main_menu_calculator_no_vm">Calc no VM</string>
    <string name="main_menu_posts">Posts</string>
    <string name="main_menu_posts_compose">Posts\nCompose</string>
    <string name="main_menu_todo">To Do</string>

    <string name="posts_compose_title">Blocs with Compose</string>
    <string name="posts_compose_error">Error: %s</string>
    <string name="posts_compose_retry">Retry</string>
    <string name="posts_compose_loading">Loading...</string>
    <string name="posts_compose_comments">%s comments</string>

    <string name="todo_title">todos</string>
    <string name="todo_description">What needs to be done?</string>
    <string name="todo_remove">Remove</string>

    <string name="counter_value">Counter: %s</string>
    <string name="counter_increment">Increment</string>
    <string name="counter_decrement">Decrement</string>

    <string name="books_load">Tap to load books</string>
    <string name="books_reload">Reload</string>
    <string name="books_clear">Clear</string>
    <string name="books_retry">Try Again</string>

    <string name="rotate_device">Rotate device now to see how the state persists</string>
    <string name="rotate_device_counter">Rotate device now to see how the state persists. Specifically with the Redux store, state is even retained when you leave the screen and return.</string>

</resources>