<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.onegravity.bloc.sample.MainMenu.ActionState" />

        <variable
            name="viewmodel"
            type="com.onegravity.bloc.menu.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/main_menu_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/menu_compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.MainMenuCompose)}"
            android:text="@string/main_menu_compose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.Books)}"
            android:text="@string/main_menu_books"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/menu_compose"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/counter_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_margins"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.Counter)}"
            android:text="@string/main_menu_counter"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_compose" />

        <Button
            android:id="@+id/counter_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.CounterCompose)}"
            android:text="@string/main_menu_counter_compose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/counter_1" />

        <Button
            android:id="@+id/counter_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_margins"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.CounterRedux)}"
            android:text="@string/main_menu_counter_redux"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counter_1" />

        <Button
            android:id="@+id/calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_margins"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.Calculator)}"
            android:text="@string/main_menu_calculator"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counter_3" />

        <Button
            android:id="@+id/calculator_no_vm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.CalculatorNoVM)}"
            android:text="@string/main_menu_calculator_no_vm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/calculator" />

        <Button
            android:id="@+id/posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_margins"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.Posts)}"
            android:text="@string/main_menu_posts"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculator" />

        <Button
            android:id="@+id/compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewmodel.onClick(ActionState.PostsCompose)}"
            android:text="@string/main_menu_posts_compose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/posts" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
